fixed div alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,11 +18,14 @@ p {
     padding-left: 20px;
     padding-right: 20px;
     margin: auto;
-    width: 50%;
+    width: 300px;
+    /* /* display: flex; */
+    justify-content: center; 
+    align-items: center;
 }
 
 .qr-code-img {
-    width: 300px; 
+    width: 300px;
     height: 300px;
     border-radius: 10px;
     display: block;
@@ -40,4 +43,5 @@ p {
     font-size: 15px;
     font-weight: 400;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
